@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST youtube-dl-2014.07.15.tar.gz 881673 SHA256 2274535bb4822af0c6a384d352b85d7c724fe9bd371d9bdd428bba4b1493bd02 SHA512 f1ec3b368559ed79c8b03621f6a27344069af9d4bb62023de5a30dfa571f863d0fc50cd874db63d9867e1c1b04a79a7e127cc13081c73705dcdc17b624fd986b WHIRLPOOL e1954e4a3217ad3a248eb7996169fec5e545fa56d60db7359a159df7a2c4da521a2e27f0eedf08ba90db1379f1248cb5be09f4daffaf58fb82ef143980cfaa3e
-DIST youtube-dl-2014.10.13.tar.gz 1094975 SHA256 4d36a051f4cd727c02f20ed05b61d9a7aa087a5c06ddeb3d6bc34faca16e6c5b SHA512 4b9d9cc997c6b37b61bfcdffd6ede18631c3c2089379cd78a7985f6574db8949d8f987feb91550e4c654225ba2b2856223b8483cd07d90d20f281076b8bd3abd WHIRLPOOL f26897c258857b588f9ae17e7dec3594c0a71a585e3c16da4871dd56affb5541e87b4ee9f5e3500c687fe714bd4569bf2e1f41d34e0ac624dd8ea58afafe3419
 DIST youtube-dl-2014.10.15.tar.gz 1097131 SHA256 f17e0a0ebae95120906c0c866caabb76ba5bf2abc8ae5cb939f8d584b1a511a8 SHA512 1bbe14d370738f0588b79e0478148fde22db8c86a46c10714f6abe3767a2189ad9e9b0dfe73fb8978e063b107bc4d9c597ca3262407a60b712162087209c7a56 WHIRLPOOL c7d22f2642c31bc5a1d42b98fbd78b60b7d45b9c1ce6f1206a710f9a723b74ff66b982fa803aa1b6d6e1f32c1f00900cdf1fe6768a10054e69489f61432e224b
+DIST youtube-dl-2014.10.18.tar.gz 1100264 SHA256 ef9c85ed1a0a375ce6d0367aff9163b409758b399cc9c6cb2042270ddbe5c0ad SHA512 40f8432033d7cb61795f66bbea15d2a06765b493bdd6366f623189038b0a17d45267314b1439614f6e28b829f9bd14920e01f09a2f8e0b08ca2af82780d69c22 WHIRLPOOL e349cfc86e9b638225142c54338b3bbc54b3cda05d0e75edcf7c8d464c9d63b9c0dceed0e33d3d242ac029afec199ce037e12df3713a912a3b9a8bee54bffd5d
 EBUILD youtube-dl-2014.07.15.ebuild 1580 SHA256 b40b45b9bdff54c5ddb131a8bbbba601f1e5a2ad77d047993bb4bc7ca4ac667f SHA512 000fe37db834ecd84fddcc87fa090e4c772e225e7eb808aed6ef1fc3dd32af362b7b25faed6329a7d609c0be27dfdcf9a58a95177272e0df1230e1bb6dfc0104 WHIRLPOOL c4488912bf867f34d7508d9a27274ab0a952956f37113d902f49913fb47837883f98ca76417564a94cd2d85dc7824fe296874aff7572bfca110e54c126678e93
-EBUILD youtube-dl-2014.10.13.ebuild 1655 SHA256 908ed9914532aebc2739ea92cbbe3d5844b299bd447fd20cb852c234f53276a5 SHA512 b3823ea5c637620eec4c93c075db28c25a8d28811b2a11ea6e109238c1f16be57887f03666f9759fe8bcb82d7bb325a040f68aaaa6faef2215d08ec56f51a8d7 WHIRLPOOL 91d619035581b943f916c1a6f639595718e4c30661507abf8846acd42d8cf4f3e938c7d88166dc2b72f9509d5245203c24c62b09aaf6155c84e829cd62355282
 EBUILD youtube-dl-2014.10.15.ebuild 1655 SHA256 665a88d820265431d782db3cc4099d04dc94e4df7b200b6403c8c5cbb3c339d1 SHA512 a49b1523b89dda564ab7f121ad7b96909bb6f897845203f56fc5cb5fd051978d0927a4ed6ed22001c98ad11ed662fb3def6663a10d25bc3e7da2025c072fe0d0 WHIRLPOOL 1559e47fae5b9e6190f29e17b6c79a86ace77ef93712a43116744d6e7c08e040b8f6df9bbbd405b2a18cc5bc652a9dcd43516ce7afe2caa80248ff81393a9eee
-MISC ChangeLog 60713 SHA256 292ba29a6c26fd1da7505c5c842d53ef191823e7c2b20f57af46d673d1d764cd SHA512 4b8e86f6e9992d87a409742d619c1d09c3dceb146f6f0ab25618394c4a18867dcd6a6682d7ee903aee1bfe12503e6540c3288b533863664d1e18746abe5bdd01 WHIRLPOOL 2fe1d5e2dc62d66670c0a7e4673c21899bfe947cf1e02c1407c1d7b49fb7b42fca330aa2bd3afc0ef1caf77eaf50a7eb1d906f9b1c85c6a8f549aebda224ea51
+EBUILD youtube-dl-2014.10.18.ebuild 1665 SHA256 3d66bf6e382597b00dedf4d6087bd5fc866932a28c39f1a9d17ada179dc42e16 SHA512 7bd08fd90f205fcb80c26336ab40e4370b6cb9ada6d6a577fa0a04e1338cdacc4373f2adacf7f0bbe166ff6ef0409de054177d027b706cddfd880a0187f69b2c WHIRLPOOL 284b6c55783781b7bca244121f75e98a9f11c26d8704947b3781514cb3dd9fc3e04387f66653e3063b738ad5cc64de5ef241ce45bfa76fe5b6534ea0b3e702ac
+MISC ChangeLog 60879 SHA256 00ef7845b84ea724e4104fe1ed322038f477e3133e6496ae1699e0d25b5fe6f7 SHA512 4e9240956fabe928209aae6ce7a198cffdd25a0baa719627350ffb89d3cce957eaf4b758049768e431d6da206e29be26426e12bc410a4e5974727742a0a685d9 WHIRLPOOL eedf5933a145394bdae96065f006f7fd5b5df1daa60ce0d7343de1ea296fc9fc1e9ea0f13bf4d4f682f10d228d586e57dffcec4facd42651435078105652c1be
 MISC metadata.xml 274 SHA256 2b4f14b46d21b004377e745db520f7961bc4163b23e6f3d8bbcab508272b1f69 SHA512 acfb3695928ebf2ee87c75f06c7ab47a65f4aa8564b1426ee523a1a5c853ed56df0de4cba186ac003383a27dfa9d21e4f4ff44b48e152c406a918f1b01ca358b WHIRLPOOL 0f245af71a769b0d4eb9bb57a99599a0875ad0373a830ff9e8215a077d3d2f02e916b7b25d275b19b5139810608abddfada68d3d0f2e9191351d26ba716b623b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQ+aGQACgkQVWmRsqeSphO6pACfQ4ljqzK+8VOrRjRNADmP5CIb
-9oEAn06ncYiQjekEmGq/4aR75rq43D+9
-=N0dK
+iEYEAREIAAYFAlRDcZYACgkQVWmRsqeSphNrNQCeIDvVy4WaIZHFsYQQhVTiQmkH
+MZAAn0rZzAR/fw0mKiBd14s+v+25lGAT
+=oFN4
 -----END PGP SIGNATURE-----
